--- a/WebApplication1/WebApplication1/Views/Shared/Headerpartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/Headerpartial.cshtml
@@ -8,7 +8,7 @@
             
         <nav>
             <ul>
-                    <li> <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Profile">Аккоунт</a></li>
+                    <li><a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Profile"><p class="logo">Аккaунт</p></a></li>
             </ul>
         </nav>
         </div>
