--- a/WebApplication1/WebApplication1/Views/Home/Select.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Select.cshtml
@@ -7,7 +7,7 @@
             <form  class="flex_row descript"  asp-action=Search asp-controller="home">
                     <input type="text" name="BeginRoute" id="destination_start" placeholder="Откуда">
                     <input type="text" name="EndRoute" id="destination_end" placeholder="Куда">
-                    <input type="date" name="date" id="date" placeholder="Выберите дату">
+                    <input type="date" name="date" id="date" min="2023-01-01" max="2023-12-12" placeholder="Выберите дату"  title="Выберите дату">
                     <input type="submit" value="Поиск">
                 </form>
         </div>
@@ -25,7 +25,7 @@
             {
                 
 
-                <a  href="" >
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="ViewingRoute" asp-route-id="@item.IdRout">
                 <div class="trip border">
 
                     <div class="tripp">
