--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="page">
+
+    
    @await Html.PartialAsync("Headerpartial")
     <main>
 
@@ -27,7 +30,7 @@
     @await Html.PartialAsync("Footerpartial")
 
     @await Html.PartialAsync("_ValidationScriptsPartial")
-
+    </div>
 </body>
 
 </html>
